--- a/mkc-client/package.json
+++ b/mkc-client/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.51.3",
     "react-medium-image-zoom": "^5.2.0",
     "react-redux": "^9.1.1",
+    "react-router-dom": "^6.23.0",
     "react-select": "^5.8.0",
     "react-zmage": "^0.8.5-beta.37",
     "redux": "^5.0.1",
