--- a/mkc-client/.env
+++ b/mkc-client/.env
@@ -1,3 +1,7 @@
 VITE_SIMPLE_REST_URL=http://my.api.url/
 VITE_JSON_SERVER_URL=https://jsonplaceholder.typicode.com
-API_URL=http://54.252.241.230:3000
+API_URL=http://13.236.86.158:3000
+#API_URL=http://54.252.241.230:3000
+#API_URL=http://localhost:3000
+
+#'root' and 'Od4Wzdan@vkn'
