--- a/mkc-client/package.json
+++ b/mkc-client/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
     "react-select": "^5.8.0",
+    "react-simple-image-viewer": "^1.2.2",
     "react-zmage": "^0.8.5-beta.37",
     "redux": "^5.0.1",
     "ssid": "^0.0.4"
