--- a/mkc-client/package.json
+++ b/mkc-client/package.json
@@ -9,8 +9,14 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/multimonth": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
     "@hello-pangea/dnd": "^16.6.0",
     "@mui/icons-material": "^5.15.15",
+    "@mui/x-date-pickers": "^7.4.0",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "compressorjs": "^1.2.1",
